<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
<item android:title="Communicate">
    <menu>
      <!--  <item android:id="@+id/id_downloadActivity"
            android:checkable="true"
            android:title="Downloads"
            android:icon="@drawable/ic_cloud_download"/>-->
        <item android:id="@+id/id_aboutapp"
            android:checkable="true"
            android:title="@string/aboutapp_name"
            android:icon="@drawable/ic_phone_android_black_24dp"/>

        <item android:title="@string/share_name"
            android:id="@+id/id_share"
            android:checkable="true"
            android:icon="@drawable/ic_share_black_24dp"/>
        <item android:title="@string/rateus_name"
            android:id="@+id/id_rate"
            android:checkable="true"
            android:icon="@drawable/ic_star_black_24dp"/>
    </menu>
</item>
</group>
</menu>