<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textDirection="anyRtl"
    android:layout_width="300dp"
    android:layout_height="wrap_content"

    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ll_cross"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_quran" />

        </LinearLayout>


        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/update_caberz"
                android:textColor="@color/colorApp"
                android:textDirection="anyRtl"
                android:textSize="18sp" />

        </LinearLayout>







    </LinearLayout>

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textStyle="normal"
        android:text="@string/caberz_recommends_that_you_update_to_the_latest_version"
        android:textColor="@color/colorApp"
        android:textDirection="anyRtl"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/lnr6"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!--  <Button
              android:textDirection="anyRtl"
              android:id="@+id/btnYes"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"
              android:layout_marginTop="10dp"
              android:layout_weight="1"
              android:fontFamily="@font/helvetica"
              android:text="@string/passenger"
              android:background="@drawable/accept_linear_bg"
              android:textAllCaps="false"
              android:textColor="@color/white"
              android:textSize="15dp" />-->


        <TextView
            android:visibility="gone"
            android:id="@+id/txt_nothanks"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:text="No thanks"
            android:textColor="#52E0B4"
            android:textDirection="anyRtl"
            android:textSize="15sp" />

        <Button
            android:gravity="center"
            android:layout_gravity="center"
            android:textDirection="anyRtl"
            android:id="@+id/btn_update"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/accept_linear_bg"
            android:text="@string/update"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>


</LinearLayout>
